Attempt to fix broken styling on mobile

--- a/AnthraClient/src/Dashboard/Components/ExplorePage/GroupExplore/GroupExplorePage.css
+++ b/AnthraClient/src/Dashboard/Components/ExplorePage/GroupExplore/GroupExplorePage.css
@@ -17,7 +17,6 @@
     border-radius: 16px;
     width: 100%;
     max-width: 900px;
-    height: 100%;
     min-height: 600px;
     max-height: 700px;
     text-align: left;
